src/test/ui/wf/wf-trait-superbound.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-trait-superbound.rs:9:21
   |
LL | trait ExtraCopy<T:Copy> { }
   | ----------------------- required by `ExtraCopy`
LL | 
LL | trait SomeTrait<T>: ExtraCopy<T> {
   |                     ^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | trait SomeTrait<T: std::marker::Copy>: ExtraCopy<T> {
   |                  ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
